@@ -26,4 +26,5 @@ v0.3.3, 2015-XX-XX
 * Added method to get all variables from a source.
 * Added check if a variable exists in a source.
 * Added timeout-handler in ftp-download.
-* Fixed bug that caused gaps in data. 
+* Fixed bug that caused gaps in data.
+* Added function that attempts to fill gaps in data.
